gobmkida/c2/find_influence_patterns
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_influence_patterns/src/engine/influence.c:1365:6: error: use of undeclared identifier 'dword_495EF8'
v6 = dword_495EF8[j < 4]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_influence_patterns/src/obj/1/influence.o] Error 1
